add github buttons

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,15 @@
 <div class="container">
     <h1>{{title}}</h1>
-    <p>Welcome to {{title}}</p>
+
+    <div class="float-left">
+        <p>Welcome to {{title}}</p>
+    </div>
+
+    <div class="float-right">
+        <a class="github-button" href="https://github.com/SSTIA/file-server/subscription" data-icon="octicon-eye" aria-label="Watch SSTIA/file-server on GitHub">Watch</a>
+        <a class="github-button" href="https://github.com/SSTIA/file-server" data-icon="octicon-star" aria-label="Star SSTIA/file-server on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/SSTIA/file-server/fork" data-icon="octicon-repo-forked" aria-label="Fork SSTIA/file-server on GitHub">Fork</a>
+    </div>
 
     <div id="file-view">
         <table class="table">
@@ -36,9 +45,10 @@
     <p class="float-right">
         Powered by <a href="https://github.com/tc-imba">tc-imba</a> from <a href="https://github.com/SSTIA">SSTIA</a>
     </p>
-
+    <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 </div>
 
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
